--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -87,5 +87,19 @@
     <dimen name="spinner_item_text_size">13sp</dimen>
 
     <!--offers-->
-    <dimen name="item_image_height">250dp</dimen>
+    <dimen name="item_image_height">260dp</dimen>
+
+    <!--START PAGE-->
+    <!--relativelayout-->
+    <dimen name="relative_layout">20dp</dimen>
+    <!--logo-->
+    <dimen name="logo_height">100dp</dimen>
+    <dimen name="logo_margin_top">15dp</dimen>
+    <dimen name="title_text_margintop">40dp</dimen>
+    <dimen name="title_text_size">16sp</dimen>
+    <!--buttons-->
+    <dimen name="buttonSignUp_height">45dp</dimen>
+    <dimen name="buttonSignUp_layout_margintop">100dp</dimen>
+    <dimen name="buttonSignUp_textsize">14sp</dimen>
+
 </resources>
