--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -103,6 +103,40 @@
     <!--offers-->
     <dimen name="item_image_height">250dp</dimen>
 
+    <!--START PAGE-->
+    <!--relativelayout-->
+    <dimen name="relative_layout">20dp</dimen>
+    <!--logo-->
+    <dimen name="logo_height">100dp</dimen>
+    <dimen name="logo_margin_top">15dp</dimen>
+    <dimen name="title_text_margintop">40dp</dimen>
+    <dimen name="title_text_size">16sp</dimen>
+    <!--buttons-->
+    <dimen name="buttonSignUp_height">45dp</dimen>
+    <dimen name="buttonSignUp_layout_margintop">100dp</dimen>
+    <dimen name="buttonSignUp_textsize">14sp</dimen>
+
+    <!--SIGN IN PAGE-->
+    <dimen name="relative_layout_signin">40dp</dimen>
+    <dimen name="forgotpass_margintop">15dp</dimen>
+    <dimen name="forgotpass_textsize">14sp</dimen>
+    <dimen name="signIn_margintop">50dp</dimen>
+    <dimen name="newuser_margintop">20dp</dimen>
+    <dimen name="newuser_left">5dp</dimen>
+    <!--Texthint-->
+    <dimen name="texthint_margintop">10dp</dimen>
+    <dimen name="textInputLayout_size">14sp</dimen>
+    <dimen name="textInputLayout_textsize">18sp</dimen>
+
+    <!--checkbox-->
+    <dimen name="checkbox_margintop">10dp</dimen>
+    <dimen name="checkbox_size">13sp</dimen>
+    <dimen name="checkbox_neartext_margintop">18dp</dimen>
+    <dimen name="checkbox_neartext_left">5dp</dimen>
+    <dimen name="SignUp_margintop">20dp</dimen>
+    <dimen name="havealready_margintop">20dp</dimen>
+    <dimen name="havealready_textsize">15sp</dimen>
+
 
 
 </resources>
