--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,6 +53,26 @@
         <item name="colorControlActivated">@color/colorMenu</item>
    </style>
 
+    <style name="AppTheme.TextInputLayout" parent="TextAppearance.Design.Hint">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textSize">@dimen/textInputLayout_size</item>
+        <!-- <item name="textSize">@dimen/textInputLayout_text_size</item>-->
+    </style>
+
+    <style name="EditTextHint" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">20sp</item>
+        <item name="android:minHeight">45dp</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="colorAccent">@android:color/white</item>
+        <item name="android:textColorHint">@color/colorAccentLight</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="colorControlNormal">@color/colorWhite</item>
+        <item name="colorControlActivated">@color/colorAccentLight</item>
+    </style>
+    <style name="AppTheme.MyCheckBox" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/colorWhite</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+    </style>
 
 
 </resources>
