--- a/app/src/main/res/layout/activity_menu_item.xml
+++ b/app/src/main/res/layout/activity_menu_item.xml
@@ -28,9 +28,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:layout_below="@id/toolbar">
-        <android.support.v7.widget.RecyclerView android:id="@+id/list_view"
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="?attr/actionBarSize">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
     </RelativeLayout>
